# ollama

api/: types.go
cmd/: cmd.go
llm/: ggml.go  llm.go  ortml.go  server.go
llm/ext_server/: server.cpp
llm/ext_server_ort/: CMakeLists.txt  server.cpp
server/: images.go  model.go
